adding home page message

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,1 +1,2 @@
-<p>home-page works!</p>
+<p><b>Hey team!</b> Thank you for reviewing this project. I have done my best to build whatever I can outside of my work hours, I must say that it was a really fun experience learning how to build website using Angular. Regardless of the outcome, thanks so much for this learning opportunity!</p>
+<img src="./assets/love.png" alt="govtech_is_the_place_i_want_to_be">
