--- a/src/app/upload-dialog/upload-dialog.component.html
+++ b/src/app/upload-dialog/upload-dialog.component.html
@@ -19,8 +19,8 @@
     </mat-form-field>
   </div>
   <div mat-dialog-actions>
-    <button mat-button (click)="closeModal()">close</button>
-    <button mat-button (click)="send()" [disabled]="fileAttr === 'Choose File'">upload</button>
+    <button mat-button (click)="closeModal()">Close</button>
+    <!-- <button mat-button (click)="send()" [disabled]="fileAttr === 'Choose File'">upload</button> -->
   </div>
 </div>
 
